k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: json-schema-store
  name: json-schema-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: json-schema-store
  template:
    metadata:
      labels:
        app: json-schema-store
    spec:
      imagePullSecrets:
        - name: $DOCKER_PULL_SECRET
      containers:
        - name: json-schema-store
          image: $DOCKER_IMAGE_NAME
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
