k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-schema-store-service
spec:
  type: NodePort
  selector:
    app: json-schema-store
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
