k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: json-schema-store-ingress
  labels:
    app: json-schema-store-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: ${HOST}
    - http:
        paths:
          - path: /biosamples/schema-store(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: json-schema-store
                port:
                  number: 8080
