k8s/ingress_template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: json-schema-store-ingress
  namespace: ${NAMESPACE}
  labels:
    app: json-schema-store-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /biosamples/schemastore(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: json-schema-store-service
                port:
                  number: 8080
